2008-08-21  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-metadata-utils.[ch]
	(tracker_metadata_utils_calculate_merge): Addded funciont.
	Given two set of metadata (old and new) calculate a list of 
	actions to do in the DB (insert, delete or update)..
	
	* tests/tracker-indexer
	* tests/tracker-indexer/tracker-metadata-utils-test.c
	* tests/tracker-indexer/Makefile.am
	* tests/Makefile.am
	* configure.ac: Added unit tests to the previous function
	
2008-08-21  Ivan Frade  <ivan.frade@nokia.com>

	* data/service/image.metadata: Set the correct data types for the
	metadata.
	
2008-08-21  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (create_update_item)
	(should_index_file) (tracker_indexer_file_move): Check return value of
	tracker_indexer_module_file_get_service_type(), since it could return
	NULL for files the module doesn't handle.

2008-08-21  Philip Van Hoof  <philip@codeminded.be>

	* src/tracker-indexer/tracker-main.c: Run forever feature for the
	indexer, for debugging purposes

2008-08-21  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-ontology.c:
	(ontology_hash_lookup_by_str), (ontology_hash_lookup_by_id): Check
	the string is != NULL before using it in g_hash_table_lookup()
	which uses strcmp for string comparisons.

2008-08-21  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.c: Removed
	is_text_file() which is no longer used.

	* src/libtracker-common/tracker-parser.[ch]: Fixed the formatting
	and use gchar instead of char in new code. Removed unnecessary
	spacing and a LOT of trailing whitespace. Fixed the header file
	too.
	
	* src/tracker-indexer/Makefile.am:
	* src/tracker-indexer/modules/Makefile.am:
	* src/trackerd/Makefile.am:
	* tests/libtracker-common/Makefile.am:
	* tests/libtracker-db/Makefile.am: Removed references to
	libxdgmime.la which was breaking the build.

2008-08-20  Jamie McCracken <jamiemcc at gnome org>
